--- a/briefly-website-static/pom.xml
+++ b/briefly-website-static/pom.xml
@@ -8,7 +8,7 @@
     <version>1.0.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>eolaire-static-content</artifactId>
+  <artifactId>briefly-static-content</artifactId>
 
   <name>Briefly Website Static Content</name>
 
