--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,8 @@
     <!--<spring.version>3.2.14.RELEASE</spring.version>-->
     <!--<spring-security.version>3.2.3.RELEASE</spring-security.version>-->
 
+    <lombok-plugin.version>1.16.4.1</lombok-plugin.version>
+
     <brikar.version>1.3.18</brikar.version>
 
     <user-service.version>1.0.1</user-service.version>
@@ -114,6 +116,14 @@
         <version>1.4.183</version>
       </dependency>
 
+      <!-- lombok -->
+      <dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>1.16.4</version>
+        <scope>provided</scope>
+      </dependency>
+
       <!-- Connection Pooling -->
       <dependency>
         <groupId>com.mchange</groupId>
@@ -122,5 +132,33 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
+
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.projectlombok</groupId>
+          <artifactId>lombok-maven-plugin</artifactId>
+          <version>${lombok-plugin.version}</version>
+          <executions>
+            <execution>
+              <id>delombok</id>
+              <phase>generate-sources</phase>
+              <goals>
+                <goal>delombok</goal>
+              </goals>
+            </execution>
+            <execution>
+              <id>test-delombok</id>
+              <phase>generate-test-sources</phase>
+              <goals>
+                <goal>testDelombok</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
 </project>
 
