--- a/briefly-website/pom.xml
+++ b/briefly-website/pom.xml
@@ -49,6 +49,12 @@
       <artifactId>user-service-spring-security</artifactId>
     </dependency>
 
+    <!-- Service Model -->
+    <dependency>
+      <groupId>com.truward.orion</groupId>
+      <artifactId>eolaire-model</artifactId>
+    </dependency>
+
     <!-- Brikar -->
     <dependency>
       <groupId>com.truward.brikar</groupId>
@@ -57,6 +63,26 @@
     <dependency>
       <groupId>com.truward.brikar</groupId>
       <artifactId>brikar-client</artifactId>
+    </dependency>
+
+    <!-- DB -->
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-tx</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>com.mchange</groupId>
+      <artifactId>c3p0</artifactId>
     </dependency>
 
     <!-- Lombok -->
