--- a/briefly-static-content/package.json
+++ b/briefly-static-content/package.json
@@ -10,6 +10,8 @@
     "bootstrap": "^3.0.0",
     "director": "^1.2.8",
 
+    "immutable": "^3.7.5",
+
     "rsvp": "^3.0.0",
     "rsvp-ajax": "1.0.2",
     "rsvp-cache": "^1.0.0",
