Adding DemoApiView and fixing spring configs to expose REST API

--- a/briefly-website/src/main/resources/brieflyWebsite/core.properties
+++ b/briefly-website/src/main/resources/brieflyWebsite/core.properties
@@ -3,10 +3,19 @@
 # If remote mode is used, it will result in calling UserRestService
 brieflyWebsite.security.mode=local
 
+# Uncomment to also fetch static content directly from your build folder
+#brikar.dev.overrideStaticPath=/path/to/briefly/briefly-static-content/target/release/brieflyWebsite/web
+
 # Remote bean: UserRestService
 brieflyWebsite.remote.userService.username=testonly
 brieflyWebsite.remote.userService.password=test
 brieflyWebsite.remote.userService.uri=http://127.0.0.1:8080/rest/user
+
+# DB settings
+brieflyWebsite.dao.dataSource.url=jdbc:h2:mem:brieflyDb;DB_CLOSE_DELAY=-1
+brieflyWebsite.dao.dataSource.username=SA
+brieflyWebsite.dao.dataSource.password=
+brieflyWebsite.dao.initScripts=classpath:/brieflyWebsite/sql/eolaire/eolaire-schema.sql,classpath:/brieflyWebsite/sql/eolaire/eolaire-fixture.sql,classpath:/brieflyWebsite/sql/generic-diag.sql
 
 
 #
