Adding error response mapping

--- a/briefly-website/pom.xml
+++ b/briefly-website/pom.xml
@@ -64,6 +64,10 @@
       <groupId>com.truward.brikar</groupId>
       <artifactId>brikar-client</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.truward.brikar</groupId>
+      <artifactId>brikar-error-response</artifactId>
+    </dependency>
 
     <!-- DB -->
     <dependency>
