--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 
     <lombok-plugin.version>1.16.4.1</lombok-plugin.version>
 
-    <brikar.version>1.3.18</brikar.version>
+    <brikar.version>1.3.19</brikar.version>
 
     <user-service.version>1.0.3</user-service.version>
     <eolaire-client.version>1.0.1</eolaire-client.version>
@@ -94,6 +94,11 @@
       <dependency>
         <groupId>com.truward.brikar</groupId>
         <artifactId>brikar-server</artifactId>
+        <version>${brikar.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.truward.brikar</groupId>
+        <artifactId>brikar-error-response</artifactId>
         <version>${brikar.version}</version>
       </dependency>
 
