--- a/briefly-static-content/package.json
+++ b/briefly-static-content/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "jest-cli": "^0.4.3",
 
+    "babel-jest": "^5.3.0",
     "babelify": "^6.1.3",
     "browserify": "^6.2.0",
     "envify": "^3.0.0",
