Adding catalog link and static target

--- a/briefly-static-content/Makefile
+++ b/briefly-static-content/Makefile
@@ -4,7 +4,7 @@ TO			=	target/release/brieflyWebsite/web
 NBIN		= ./node_modules/.bin
 PORT		= 8000
 
-.PHONY: clean browserify libs test watch compile server css
+.PHONY: clean browserify libs test watch compile server static
 
 
 # Targets
@@ -34,12 +34,12 @@ browserify: node_modules target js/main.js
 	rm -rf $(TO)/js/bundle.js
 	$(NBIN)/browserify . -t [envify --NODE_ENV production] -t [babelify --stage 0] | $(NBIN)/uglifyjs -cm > $(TO)/js/bundle.js
 
-css:
+static:
 	mkdir -p $(TO)/css
 	cp -r css/* $(TO)/css
 	cp -r root/* $(TO)/
 
-compile: libs browserify css
+compile: libs browserify static
 
 test: node_modules target
 	npm test
