--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
   </description>
 
   <modules>
+    <module>briefly-model</module>
     <module>briefly-static-content</module>
     <module>briefly-website</module>
   </modules>
@@ -36,7 +37,6 @@
     <brikar.version>1.3.19</brikar.version>
 
     <user-service.version>1.0.3</user-service.version>
-    <eolaire-client.version>1.0.1</eolaire-client.version>
 
     <!--  compiler settings -->
     <maven.compiler.source>1.8</maven.compiler.source>
@@ -46,13 +46,6 @@
   <dependencyManagement>
 
     <dependencies>
-      <!-- Eolaire Model -->
-      <dependency>
-        <groupId>com.truward.orion</groupId>
-        <artifactId>eolaire-model</artifactId>
-        <version>${eolaire-client.version}</version>
-      </dependency>
-
       <!-- User Service Model -->
       <dependency>
         <groupId>com.truward.orion</groupId>
