--- a/scripts/briefly-db-init/src/main/resources/brieflyDbinit/core.properties
+++ b/scripts/briefly-db-init/src/main/resources/brieflyDbinit/core.properties
@@ -1,5 +1,7 @@
 
-app.name=EOL Migration
+app.name=Briefly DB Init
+
+briefly.dbinit.mode=MIGRATION
 
 # DataSource
 briefly.dbinit.dao.dataSource.url=jdbc:h2:mem:tempDb;DB_CLOSE_DELAY=-1
