--- a/briefly-website/pom.xml
+++ b/briefly-website/pom.xml
@@ -113,6 +113,12 @@
       <artifactId>brikar-protobuf-http-bin</artifactId>
     </dependency>
 
+    <!-- AWS S3 -->
+    <dependency>
+      <groupId>com.amazonaws</groupId>
+      <artifactId>aws-java-sdk-s3</artifactId>
+    </dependency>
+
     <!-- Spring security -->
     <dependency>
       <groupId>org.springframework.security</groupId>
