--- a/briefly-static-content/package.json
+++ b/briefly-static-content/package.json
@@ -16,21 +16,21 @@
     "rsvp-ajax": "1.0.2",
     "rsvp-cache": "^1.0.0",
 
-    "react": "^0.13.3"
+    "react": "^0.14.7"
   },
 
   "devDependencies": {
-    "jest-cli": "^0.4.3",
+    "jest-cli": "^0.9.2",
 
-    "babel-jest": "^5.3.0",
-    "babelify": "^6.1.3",
-    "browserify": "^6.2.0",
-    "envify": "^3.0.0",
-    "reactify": "^0.15.2",
-    "uglify-js": "~2.4.15",
-    "watchify": "^2.1.1",
+    "babel-jest": "^9.0.3",
+    "babelify": "^7.2.0",
+    "browserify": "^13.0.0",
+    "envify": "^3.4.0",
+    "reactify": "^1.1.1",
+    "uglify-js": "^2.6.2",
+    "watchify": "^3.7.0",
 
-    "http-server": "^0.8.4"
+    "http-server": "^0.9.0"
   },
 
   "scripts": {
