--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,8 @@
 
     <user-service.version>1.0.3</user-service.version>
 
+    <utc-time.version>1.0.6</utc-time.version>
+
     <!--  compiler settings -->
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
@@ -95,6 +97,18 @@
         <groupId>com.truward.brikar</groupId>
         <artifactId>brikar-error-response</artifactId>
         <version>${brikar.version}</version>
+      </dependency>
+
+      <!-- UTC time -->
+      <dependency>
+        <groupId>com.truward.time</groupId>
+        <artifactId>utc-time</artifactId>
+        <version>${utc-time.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.truward.time</groupId>
+        <artifactId>utc-time-sql</artifactId>
+        <version>${utc-time.version}</version>
       </dependency>
 
       <!-- AWS SDK -->
