--- a/briefly-static-content/package.json
+++ b/briefly-static-content/package.json
@@ -1,8 +1,5 @@
 {
-  "name": "briefly-static-content",
-  "version": "1.0.0",
-
-  "author": "Alex Shabanov",
+  "private": true,
 
   "main": "js/main.js",
 
@@ -16,49 +13,39 @@
     "rsvp-ajax": "1.0.2",
     "rsvp-cache": "^1.0.0",
 
-    "react": "^0.14.7"
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7"
   },
 
   "devDependencies": {
-    "jest-cli": "^0.9.2",
+    "babelify": "^7.2.0",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
 
-    "babel-jest": "^5.3.0",
-    "babelify": "^6.1.3",
-    "browserify": "^6.2.0",
-    "envify": "^3.0.0",
-    "reactify": "^0.15.2",
-    "uglify-js": "~2.4.15",
-    "watchify": "^2.1.1",
+    "watchify": "^3.4.0",
 
-    "http-server": "^0.8.4"
+    "babel-jest": "^9.0.0",
+    "jest-cli": "*",
+
+    "react-addons-test-utils": "~0.14.7",
+
+    "http-server": "^0.9.0"
   },
 
   "scripts": {
     "test": "jest"
   },
 
-  "browserify": {
-    "transform": [
-      ["babelify", { "stage": 0 }],
-      "envify"
-    ]
-  },
-
   "jest": {
-    "rootDir": "",
-
     "modulePathIgnorePatterns": [
       "/node_modules/"
     ],
-
     "preprocessorIgnorePatterns": [
       "/node_modules/"
     ],
-
     "testPathDirs": [
       "<rootDir>/js"
-    ],
-
-    "scriptPreprocessor": "./node_modules/babel-jest"
+    ]
   }
 }
