--- a/briefly-website/src/main/resources/brieflyWebsite/core.properties
+++ b/briefly-website/src/main/resources/brieflyWebsite/core.properties
@@ -3,6 +3,9 @@
 # If remote mode is used, it will result in calling UserRestService
 brieflyWebsite.security.mode=local
 
+# Path to freemarker scripts
+brieflyWebsite.web.freemarkerPath=classpath:/brieflyWebsite/web/freemarker
+
 # Uncomment to also fetch static content directly from your build folder
 #brikar.dev.overrideStaticPath=/path/to/briefly/briefly-static-content/target/release/brieflyWebsite/web
 
