Adding 404 and 403 pages to assets (404 is still not working)

--- a/briefly-static-content-v2/Makefile
+++ b/briefly-static-content-v2/Makefile
@@ -46,6 +46,7 @@ static:
 	cp -r css/* $(ASSETS)/css
 	cp -r root/* $(STATIC)/
 	cp -r freemarker/* $(FTL)
+	cp -r assets/* $(ASSETS)
 
 compile: libs browserify static
 
